# SynapseFinance

./: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/: docker-compose.pgadmin.yml  init-db.sql  pgbouncer.ini  servers.json  userlist.txt
docs/: login-latency-optimization.md  pgbouncer-setup.md  rls-implementation-guide.md
frontend/synapse_finance/: Makefile  README.md  pubspec.yaml
frontend/synapse_finance/lib/: main.dart
frontend/synapse_finance/linux/: CMakeLists.txt
frontend/synapse_finance/test/: widget_test.dart
frontend/synapse_finance/web/: index.html  manifest.json
frontend/synapse_finance/windows/: CMakeLists.txt
plans/: ai-chat-assistant.md  generate_pdf.py  subscription-payment-confirmation.md
synapse/: db.sqlite3  pytest.ini
synapse/accounts/: admin.py  auth.py  cache.py  exchange_service.py  middleware.py  models.py  schemas.py  views.py
synapse/accounts/migrations/: 0001_initial.py  0002_enable_rls_policies.py  0002_subcurrency_apppreference.py  0003_user_avatar_url.py  0004_exchangerate.py
synapse/accounts/router/: __init__.py  auth_router.py  currency_router.py
synapse/accounts/tests/: conftest.py  test_api.py  test_auth.py  test_models.py
synapse/ledger/: admin.py  models.py  schemas.py
synapse/ledger/migrations/: 0001_initial.py  0002_enable_rls_policies.py  0003_category_is_archived.py  0004_transaction_currency_transaction_exchange_rate_and_more.py  (+1 more)
synapse/subscriptions/: models.py  schemas.py
synapse/synapse/: asgi.py  constants.py  settings.py  test_settings.py  urls.py  wsgi.py
(+176 files in other folders)
